--- a/automerge_example.html
+++ b/automerge_example.html
@@ -28,7 +28,7 @@ Welcome to Git !
             </tr>
             <tr>
                     <td>02</td>
-                    <td></td>
+                    <td>Shibutani</td>
             </tr>
             <tr>
                     <td>03</td>
@@ -37,8 +37,7 @@ Welcome to Git !
             <tr>
                     <td>04</td>
                     <td></td>
-            </tr>
-            <tr>
+    < /tr >
                     <td>05</td>
                     <td></td>
             </tr>
@@ -106,5 +105,5 @@ Welcome to Git !
         </table>
 
     </div>
-</body>
-</html>
+	</body>
+	</html>
